fixing alignment of instructions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
-.game-content {
+.game-content,
+.instructions {
     text-align: center;
 }
